# cubic

./: .gitignore  CMakeLists.txt  README.md  main.cpp
include/: main.h
